tests/combined/invalid/unreachable_code_after_return.simple
# Test 19: Unreachable code detection
begin
  function int unreachable_test() begin
    int x;
    return 42;
    x = 10; # Error
  end
end